<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantallaAcerca"
    android:background="#221f1f">

    <Button
        android:id="@+id/Volver"
        android:layout_width="222dp"
        android:layout_height="49dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="@color/colorBoton"
        android:text="@string/Volver"
        android:textColor="#f5f5f1"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/BotonTelefono"
        android:layout_width="49dp"
        android:layout_height="43dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="20dp"
        android:background="#221f1f"
        android:rotation="180"
        android:rotationY="180"
        app:layout_constraintBottom_toTopOf="@+id/Volver"
        app:layout_constraintEnd_toStartOf="@+id/BotonEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@android:drawable/ic_menu_call" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nombre"
        android:textColor="#f5f5f1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.04" />

    <ImageButton
        android:id="@+id/BotonEmail"
        android:layout_width="49dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="96dp"
        android:background="#221f1f"
        app:layout_constraintBottom_toTopOf="@+id/Volver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/Datos"
        android:textColor="#f5f5f1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Telefono"
        android:layout_width="59dp"
        android:layout_height="24dp"
        android:layout_marginStart="93dp"
        android:text="@string/Telefono"
        android:textColor="#f5f5f1"
        app:layout_constraintBottom_toTopOf="@+id/Volver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BotonTelefono"
        app:layout_constraintVertical_bias="0.031" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="104dp"
        android:text="@string/Email"
        android:textColor="#f5f5f1"
        app:layout_constraintBottom_toTopOf="@+id/Volver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BotonEmail"
        app:layout_constraintVertical_bias="0.058" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="148dp"
        android:layout_height="176dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_editor_absoluteX="84dp"
        app:srcCompat="@drawable/avatar" />

</androidx.constraintlayout.widget.ConstraintLayout>