<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="357dp"
        android:layout_height="710dp"
        android:background="#221f1f"
        tools:context=".PantallaPrincipal"
        tools:layout_editor_absoluteY="-15dp">

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="@color/colorBoton"
        android:text="@string/Salir"
        android:textColor="#f5f5f1"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAcerca" />

    <Button
        android:id="@+id/btnAcerca"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="@color/colorBoton"
        android:text="@string/Acerca"
        android:textColor="#f5f5f1"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:background="#221f1f"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/netflix" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="281dp"
        android:layout_height="139dp"
        android:layout_marginTop="160dp"
        android:text="@string/info"
        android:textColor="#f5f5f1"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
